reports/userguide/notebooks/introduction.err.log
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# The config reader will automatically read from ./configs/config.yml
pprint(config_reader.read(), sort_dicts=False)
------------------

Traceback [0;36m(most recent call last)[0m:

[0m  File [1;32m/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3433[0m in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)[0m

[0m  Cell [1;32mIn [4], line 2[0m
    pprint(config_reader.read(), sort_dicts=False)[0m

[0m  File [1;32m/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/dicfg/reader.py:103[0m in [1;35mread[0m
    cli_config = self._read_cli(sys.argv[1:])[0m

[0m  File [1;32m/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/dicfg/reader.py:139[0m in [1;35m_read_cli[0m
    dicts.append(_create_dict_from_keys(keys, value))[0m

[0m  File [1;32m/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/dicfg/reader.py:162[0m in [1;35m_create_dict_from_keys[0m
    dictionary[keys[0]] = dict(_create_dict_from_keys(keys[1:], value))[0m

[0m  File [1;32m/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/site-packages/dicfg/reader.py:160[0m in [1;35m_create_dict_from_keys[0m
    dictionary[keys[0]] = ast.literal_eval(value)[0m

[0m  File [1;32m/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/ast.py:59[0m in [1;35mliteral_eval[0m
    node_or_string = parse(node_or_string, mode='eval')[0m

[0;36m  File [0;32m/opt/hostedtoolcache/Python/3.8.14/x64/lib/python3.8/ast.py:47[0;36m in [0;35mparse[0;36m
[0;31m    return compile(source, filename, mode, flags,[0;36m

[0;36m  File [0;32m<unknown>:1[0;36m[0m
[0;31m    :memory:[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<unknown>, line 1)

